--- a/templates/index.html
+++ b/templates/index.html
@@ -292,7 +292,7 @@
   </div>
 
   <!-- app.js -->
-  <script src="/static/app.js?v=20260210"></script>
+  <script src="/static/js/app.js?v=20260210"></script>
 
   <script>
     // 🧠 Detector: se o app.js não rodar, ele avisa.
